Ansible/Deployments/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: urlmanager-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: urlmanager-svc.urlapp.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: urlredirect-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: urlredirect-svc.urlapp.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: prometheus-server.prometheus-operator.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-alert-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: prometheus-alertmanager.prometheus-operator.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: grafana.prometheus-operator.svc.cluster.local
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: urlapp-ingress
  namespace: ingress-nginx
spec:
  rules:
    - host: manager.rdrct.pw
      http:
        paths:
          - path: /
            backend:
              serviceName: urlmanager-external
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: urlredirect-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /r/$1
spec:
  rules:
    - host: rdrct.pw
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: urlredirect-external
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: ingress-nginx
  annotations:
spec:
  rules:
    - host: prometheus.rdrct.pw
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus-external
              servicePort: 80
    - host: alerts.rdrct.pw
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus-alert-external
              servicePort: 80
    - host: grafana.rdrct.pw
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana-external
              servicePort: 80
